# cmake-demo-rom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: Findlibdragon.cmake  Findlibultra.cmake  Findn64sdkmod.cmake  toolchain.libdragon.cmake  toolchain.mips64-elf.cmake  toolchain.n64chain.cmake  toolchain.n64sdkmod.cmake
CMake/Modules/: FindLIBDRAGON.cmake
demos/dragon-demo/: CMakeLists.txt
demos/dragon-demo/src/: libdragonwrapper.hpp  main.cpp
demos/nusys-demos/nu0/: CMakeLists.txt  nu0.ld
demos/nusys-demos/nu1/: CMakeLists.txt
demos/nusys-demos/nu2/: CMakeLists.txt
demos/nusys-demos/nu3/: CMakeLists.txt  nu3.ld
demos/nusys-demos/nu4/: CMakeLists.txt  nu4.ld
demos/nusys-demos/nu5/: CMakeLists.txt
demos/nusys-demos/nugfxinit/: CMakeLists.txt  nugfxinit.ld
demos/nusys-demos/nusnake/: CMakeLists.txt  nusnake.ld
src/: libdragonwrapper.cpp  libdragonwrapper.h  libdragonwrapper.hpp  main.cpp
